client/src/components/Debug/Groups/Table/Table.module.css
td{
    height: 50px;
}

td{
    vertical-align: middle;
}

table, th, td {
    border: 1px solid #c6c5c5;
    border-collapse: collapse;
}

thead td{
    border: none;
}

thead tr{
    background-color: rgba(207, 207, 207, 1);
    border-radius: 10px 0 0 0;
}

.name_td{
    width: 350px;
    padding: 0 5px 0 20px;
}

.user_td{
    max-width: 200px;
    text-align: center;
}

.comment_td{
    width: 200px;
    text-align: center;
}

